Made complete pass.  RC1.

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,5 +1,10 @@
 \section{Conclusion}
 \label{sec:conclusion}
 
-In this paper, we studied the problem of smartly placing green datacenters in proper locations with considering the impact on the electric grid. Since connecting datacenters and renewable energy plants to the utility grid will change the power flow of the whole grid network, and thus the grid losses should be incorporated when trying to minimize the total cost. In this context, we proposed an optimization framework with the purpose of optimizing the total cost including datacenter, renewable energy plant and also the grid cost. The problem is formulated with several necessary constraints according to the reliability issues for the grid. By solving the problem, we tried to seek for best locations for sitting and provisioning the capacity of both datacenters and renewable energy plants. Our optimization results show that considering the grid cost will have different impact on the placement choice for sitting datacenters and renewable power plants. This means grid-aware placement strategies could further help saving the overall cost from the perspective of both IT companies and grid operators.
+In this paper, we proposed that new renewable powered datacenters should be placed intelligently while considering their impact on the electricity transmission system (along with other datacenter capital and operation costs).  Specifically, we studied the potential impact of new datacenters on the New England ISO transmission system.  Using simulation, we show that different placements of a new datacenter and its offsetting wind farm can lead to increased overloading of transmission lines, grid voltage variations outside the acceptable range, and transmission system losses.  Thus, strategic placement of new renewable powered datacenters can be beneficial for both grid operators and datacenters owners.  We developed an optimization framework for the placement of a new datacenter and offsetting wind farm.  Simulation results show that considering the impact on the grid transmission system can lead to costs savings of tens of millions of dollars, and avoid overloading of transmission lines and unacceptable grid voltage variations.
 
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "paper"
+%%% End:
