--- a/paper.tex
+++ b/paper.tex
@@ -50,7 +50,7 @@
 \title{Grid-Aware Placement of Datacenters\\and Wind Farms
 % \thanks{This work was partially supported by NSF grant XXX-YYYYYY %CSR-1117368
 % and the Rutgers Green Computing Initiative.}
-%\vspace{-0.3in}
+\vspace{-0.5in}
 }
 
 % Thu: Anonymity for double-blind review.
