--- a/related.tex
+++ b/related.tex
@@ -5,7 +5,7 @@ As already mentioned, a number of previous efforts have studied the placement of
 
 A previous work that has considered the interaction of datacenters and the grid is~\cite{liu2014pricing}.  In this work, Liu $\textit{et al.}$ show that adding renewable power plants (solar in their study) can lead to voltage violations within a grid distribution system.  Then, they showed that if datacenters help avoid such voltage violations by dynamically adjusting their power demand based on signals from the grid.  A number of research efforts have also studied how datacenters can participate in demand response programs and ancillary services to help ease the management of the grid~\cite{Aikema12,AdamWierman2014}.  A key difference between these works and ours is the assumption of datacenters being able to dynamically adjust their power demands in response to grid signals.  In addition, they did not actually consider the placement of datacenters, nor did they consider transmission loss.
 
-Mohsenian $\textit{et al.}$ in \cite{Mohsenian-Rad10grid} proposed a request distribution policy among datacenters to ensure power load balancing. They tried to minimize the maximum power on any transmission line by distributing the computing requests to suitable datacenter. Their work assumes that a fairly large number of datacenters (e.g. 6) are connected to the same power distribution network.  \thunote{Xiaoying, did they consider the placement of datacenter and transmission loss?} \xynote{No, they only considered the impact of request routing algorithm on the load of each transmission line/branch.}
+Mohsenian $\textit{et al.}$ in \cite{Mohsenian-Rad10grid} proposed a request distribution policy among datacenters to ensure power load balancing. They tried to minimize the maximum power on any transmission line by distributing the computing requests to suitable datacenter. Their work assumes that a fairly large number of datacenters (e.g. 6) are connected to the same power distribution network.  Further, they did not consider the impact of transmission loss on the placement of datacenters.
 
 % Larumbe $\textit{et al.}$ \cite{larumbe2012optimal} presented a mathematical problem aiming at solving the location and routing of cloud service components.
 % Unlike our work, they didn't put insights the possible impact of datacenters and distributed energy generations on the utility grid system.
