--- a/intro.tex
+++ b/intro.tex
@@ -3,7 +3,7 @@
 
 Datacenters are being constructed at a rapid pace as computing is increasingly moving to the cloud (e.g., \cite{RM14DCGrowth}).  As new datacenters are built, some companies are seeking to mitigate the environmental impact of their massive energy consumption by also building offsetting renewable power plants (e.g.,~\cite{GoogleGreen,Apple13,McGrawHill11}).  Both the new datacenters and the accompanying renewable power plants can pose challenges to the electricity grid.  Specifically, a large datacenter can require upward of 100MW of power, presenting a significant load to the grid.  Since adding transmission capacity to the grid takes a long time (typically 7 to 10 years) and is extremely expensive \cite{interconnection2010survey}, attaching new large datacenters and renewable power plants to the grid can lead to increased overloading of transmission lines, grid voltage variations outside the acceptable range, and transmission system losses.  Thus, the increasing penetration of such {\em renewable powered datacenters}\footnote{Note that we are calling a datacenter together with an offsetting renewable power plant a ``renewable powered datacenter'' for brevity, even though the two may {\em not} be physically co-located.} makes it imperative to study their impact on the transmission grid.
 
-Researchers have studied the placement of new datacenters since they are expensive to build and operate, and parts of the construction and operation costs are location-dependent~\cite{Goiri11place,Dalger05,Boley09,larumbe2012optimal,berral2014building}.  However, these studies have not considered the impact of new datacenters on the grid.  Others have studied whether the renewable power plants should be co-located with the datacenters\cite{Ren12MASCOTS}, and have considered transmission loss when the datacenter and the renewable power plant were physically distributed.  However, only a fixed loss percentage was assumed.
+Researchers have studied the placement of new datacenters since they are expensive to build and operate, and parts of the construction and operation costs are location-dependent~\cite{Goiri11place,Dalger05,Boley09,larumbe2012optimal,berral2014building}.  However, these studies have not considered the impact of new datacenters on the grid.  Others have studied whether the renewable power plants should be co-located with the datacenters\cite{Ren12MASCOTS}, and have considered transmission loss when the datacenter and the renewable power plant were physically distributed.  However, they assumed a fixed loss percentage.
 
 In this paper, we first show that the placement of a large renewable powered datacenter can significantly impact the transmission grid, and that careful placement can be beneficial to both the grid operators and datacenter owners.  Specifically, we study the impact of placing a datacenter and an offsetting wind farm within a real world transmission system of the New England Independent System Operator (ISO) spanning most of North Eastern region of United States and some parts of Canada.  We use simulation to show that datacenters/renewable power plants located at strategic places in the grid could help minimize i) overloading of transmission lines; ii) grid voltage variations outside the acceptable range; iii) system losses.
 
@@ -19,14 +19,14 @@ In this paper, we first show that the placement of a large renewable powered dat
 
 % In this case, companies who want to build datacenters with either on-site or off-site renewable energy plants have to get the permission from the grid operators first in order to reduce the unexpected influence to the grid operation. Since the grid losses will also finally turn into expenses for end-users, service providers may want to collaborate with grid operators to minimize the overall cost when planning locations and capacity for the datacenters. In the current literature, datacenter placement issues have been mentioned in some prior work\cite{Goiri11place,Dalger05,Boley09,larumbe2012optimal}, and there are also some research focused on the capacity planning of green datacenters \cite{Le10,berral2014building}. Nevertheless, these work hasn't considered the impact of datacenter placement on the grid itself, which might also lead to comparable costs as other costs for datacenters.
 
-Next, having shown that the placement of new renewable powered datacenters can significantly impact the transmission system, we proceed to develop an optimization framework for minimizing the total cost of building and operating new datacenters.  Similar to previous works in this area, our framework considers the various capital costs (e.g., land and construction costs) and operational costs of building and operating a new renewable powered datacenter.\footnote{Note that we are not proposing a new method for the placement of renewable power plants (specifically wind farms in our study).  Our cost models are likely simplistic compared to existing techniques for finding good locations for new wind farms.  Rather, the point of our work is that costs for the placement of a new datacenter, renewable power plant, {\em and} their impact on the transmission grid should be studied together.}
+Next, having shown that the placement of new renewable powered datacenters can significantly impact the transmission system, we proceed to develop an optimization framework for minimizing the total cost of building and operating new datacenters.  Similar to previous works in this area, our framework considers the various capital costs (e.g., land and construction costs) and operational costs of building and operating a new renewable powered datacenter.\footnote{Note that we are not proposing a new method for the placement of renewable power plants, which has been studied extensively in the industry.  Rather, the point of our work is that costs for the placement of a new datacenter, renewable power plant, {\em and} their impact on the transmission grid should be studied together.}
   Unique to this work, however, is the added consideration of the cost of system loss in the transmission grid, as well as constraints of avoiding transmission line overloading and unacceptable voltage variations.
 
-Finally, we use our optimization framework in a case study to demonstrate the potential benefits of our placement approach.  Specifically, we again study the placement of a new datacenter and an offsetting wind farm in the New England ISO system.  \thunote{Need to give a couple of sentences here to summarize our results.} Results of our case studies illustrate that by jointly considering the placement of the datacenter and the wind farm, the total cost will be reduced compared to other strategies, including the cost of system losses in the electric grid.
+Finally, we use our optimization framework in a case study to demonstrate the potential benefits of our placement approach.  Specifically, we again study the placement of a new datacenter and an offsetting wind farm in the New England ISO system.  Our results show that the strategic placement of a new renewable datacenter can indeed help to avoid the occurrences of transmission line overloading and unacceptable voltage variations.  Further, strategic placement while considering transmission system losses can lead to 8\% cost savings compared to simply co-locating the datacenter and wind farm, and 3.4\% compared to placement while ignoring the impact on the transmission grid.  While these percentages are modest, they translate to savings of tens of million dollars per year.
 
 % In this paper, we attempt to set up a different point of view, by combining the consideration for cloud service providers and energy companies together and aiming at the minimization of the overall cost for both. First, we investigate the impact of datacenter placement and its importance to the grid by studying a region of grid network. We pay special attention to the datacenter size, datacenter locations and the variation of renewable power generations. Second, we formulate the optimization framework, which incorporates the costs of datacenters, renewable power plants and power grid into one objective. We also try to solve it under necessary constraints by using several different approaches. Then we conduct a case study in the New England area of the United States, by sitting and provisioning datacenters and power plants at different locations, with the purpose of minimizing the overall cost. Results show that grid losses can have remarkable impact on the decision of selecting best locations for green datacenters. Furthermore, the co-location choices by sitting the datacenter and green plants together don't show advantages despite of the reduced line cost and distribution cost, which is not that intuitive as prior work thought.
 
-\myparagraph{Contributions.} Our main contributions include: (i) demonstrating the potential impact of renewable powered datacenter placement on a transmission system, (ii) proposing an optimization framework for the smart placement of both datacenters and renewable power plants in the power grid network, and (iii) exploring the potential benefit of the placement framework in a realistic case study.
+\myparagraph{Contributions.} Our main contributions include: (i) demonstrating the potential impact of renewable powered datacenter placement on a grid transmission system, (ii) proposing an optimization framework for the smart placement of both datacenters and renewable power plants in the power grid network, and (iii) exploring the potential benefit of the placement framework in a realistic case study.
 
 % To the extent of our knowledge, there is no previous work considering the jointly placement issues of datacenters and green power plants while caring about the grid operational costs together. The remainder of the paper is organized as follows. Section \ref{sec:quantify} first quantifies the potential of datacenters together with wind farms by placing them into different buses of the grid network system. In Section \ref{sec:framework}, we describe the optimization framework in detail, showing the integration of various parameters of the entire problem. Section \ref{sec:eval} evaluates the costs and illustrates breakdown of the total cost by different kinds of strategies. In Section \ref{sec:related}, we present some prior work related to this paper. Finally, the conclusion is given in Section \ref{sec:conclusion}.
 
